added label for medicine

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -76,9 +76,9 @@
                 </div>
                 <div class="medicine">
                     <img src="Analgesics/Diclofenac.jpeg" alt="Diclofenac">
-                    <p>Diclofenac ($11)</p>
+                    <label for="2"><p>Diclofenac ($11)</p></label>
                     <div class="actions">
-                        <input type="number" class="quantity" value="1" min="1" data-name="Diclofenac">
+                        <input type="number" id="2" class="quantity" value="1" min="1" data-name="Diclofenac">
                         <button class="add-to-cart" data-name="Diclofenac" data-price="11">🛒Add to Cart</button>
                         
                     </div>
